# QxGL_Template

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
